syntax = "proto3";

option csharp_namespace = "gRPCServerProtos";

package product;

service Product{
	rpc GetProductInformation (GetProductDetail) returns (ProductModel);
}

message GetProductDetail{
	int32 productId = 1;
}

message ProductModel{
	string productName = 1;
	string productDescription = 2;
	int32 productPrice = 3;
	int32 productStock = 4;
}
